cloud-controllers/crossplane/aws/s3/s3-bucket-versioning-check.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: s3-bucket-versioning-check
  annotations:
    policies.kyverno.io/title: S3 Bucket Versioning Check
    policies.kyverno.io/category: Cloud Security and Best Practices
    policies.nirmata.io/cloudprovider: AWS
    policies.nirmata.io/cloudservice: S3
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: S3 Bucket
    policies.kyverno.io/description: Ensure versioning is enabled for S3 buckets
spec:
  rules:
    - match:
        resources:
          kinds:
            - Bucket
      name: s3-bucket-versioning-enabled
      validate:
        message: s3 bucket versioning must be Enabled. Set spec.forProvider.versioningConfiguration
        pattern:
          spec:
            forProvider:
              versioningConfiguration:
                status: Enabled
  validationFailureAction: Enforce
